fix(TaskListItem): allow word wrap

--- a/src/Routes/Demo/TodoList/Loader/Success/TaskListItem/style.less
+++ b/src/Routes/Demo/TodoList/Loader/Success/TaskListItem/style.less
@@ -1,23 +1,27 @@
 :local {
   .task-list {
     display: flex;
+    align-items: flex-start;
     position: relative;
-    height: 48px;
     overflow: hidden;
+
+    &:hover,
+    &.editing {
+      background: rgb(211, 211, 211);
+    }
   }
 
   .content {
-    line-height: 48px;
-    text-overflow: ellipsis;
-    overflow: hidden;
     flex: 1;
-    white-space: nowrap;
     outline: none;
     cursor: pointer;
     background: transparent;
     border: 0;
     padding: 0;
     margin: 0;
+    padding: 16px 0;
+    word-break: break-word;
+    word-wrap: break-word;
   }
 
   .time {
@@ -29,20 +33,7 @@
   }
 
   .actions {
-    position: absolute;
-    width: 72px;
     text-align: right;
-    background: linear-gradient(to left, rgba(255, 255, 255, 1) 0%,rgba(255, 255, 255, 1) 66%,rgba(255, 255, 255, 0) 100%);
     right: 0;
-  }
-
-  .task-list:hover,
-  .task-list.editing {
-    background: rgb(211, 211, 211);
-
-    .actions {
-      background: linear-gradient(to left, rgba(211, 211, 211, 1) 0%,rgba(211, 211, 211, 1) 66%,rgba(211, 211, 211, 0) 100%);
-      width: 96px;
-    }
   }
 }
