--- a/src/Routes/Demo/TodoList/Loader/style.less
+++ b/src/Routes/Demo/TodoList/Loader/style.less
@@ -1,4 +1,6 @@
 :local {
   .loader {
+    position: relative;
+    overflow: hidden;
   }
 }
