--- a/src/Routes/Demo/TodoList/style.less
+++ b/src/Routes/Demo/TodoList/style.less
@@ -6,6 +6,7 @@
   .app {
     height: 100vh;
     width: 100vw;
+    overflow: auto;
     background-color: lightgrey;
     padding: 0 16px 16px 16px;
   }
